--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
+ <!-- This is a comment-->
+<head>
+<title>Cat Perry's Worse cats</title>
+<link rel="stylesheet" type="text/css" href="company.css" />
+<link rel="stylesheet" type="text/css" href="engineering-department.css" />
+<link rel="stylesheet" type="text/css" href="project-x-launch.css" />
+<link rel="stylesheet" type="text/css" href="typography.css" />
+</head>
+<body> 
+    <link
+  rel="stylesheet"
+  href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+/>
+</body>
+</html>
+    
